--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,526 @@
 */
 
 .page {
+  color: var(--themes-text-color, #000);
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: sans-serif;
+  background-color: var(--themes-background, #fff);
+  background-image: var(--themes-background-image);
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 100px clamp(0rem, -8.187rem + 34.93vw, 23.25rem)
+    clamp(6.375rem, 6.309rem + 0.282vw, 6.563rem);
+}
+
+@supports (font-variation-settings: normal) {
+  .page {
+    font-family: var(--main-font, sans-serif);
+    font-variation-settings: "wght" var(----main-font-weight, 400);
+  }
+}
+
+.header {
+  font-family: var(--accent-font, sans-serif);
+  min-inline-size: 320px;
+  inline-size: 100%;
+  background-color: var(--themes-background, #fff);
+  border: 2px solid var(--themes-main-color, #000);
+  padding: clamp(7.5rem, 7.148rem + 1.502vw, 8.5rem)
+    clamp(0.875rem, -1.469rem + 10vw, 7.531rem) 25px;
+  margin-block-end: 102px;
+}
+
+.header__logo {
+  word-break: normal;
+  font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
+  text-align: center;
+  font-weight: normal;
+  margin-block-end: 20px;
+  text-transform: uppercase;
+}
+
+.header__title {
+  text-align: center;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  margin-block-end: 25px;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+.theme-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  font-size: var(--button-font-size, 14px);
+  margin-inline-start: 20px;
+}
+
+.theme-menu__button {
+  padding: 0;
+  position: relative;
+  text-transform: uppercase;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+}
+
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -3px;
+  background-color: transparent;
+  transition: width 0.3s, background-color 0.3s;
+}
+
+.theme-menu__button:focus-visible::after {
+  background-color: var(--themes-main-color, #000);
+  width: 100%;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+  position: relative;
+  transition: opacity 0.3s ease;
+}
+
+button:disabled::before {
+  content: "▶";
+  position: absolute;
+  top: 0;
+  left: -20px;
+  animation: marker 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes marker {
+  from {
+    left: -20px;
+  }
+
+  to {
+    left: -16px;
+  }
+}
+
+.content {
+  font-size: var(--main-font-size, 18px);
+}
+
+.content__card-list {
+  display: flex;
+  flex-direction: column;
+  gap: 54px;
+  margin-block-end: 50px;
+}
+
+.content__card-item {
+  background-color: var(--themes-background, #fff);
+  border: 2px solid var(--themes-main-color, #000);
+}
+
+.content__card-heading {
+  padding: 3.5px 10px 5.5px;
+  min-block-size: 34px;
+  vertical-align: middle;
+  font-size: inherit;
+  font-variation-settings: "wght" var(--heading-font-weight, 700);
+  border-block-end: 2px solid var(--themes-main-color, #000);
+}
+
+.image__container {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-image {
+  aspect-ratio: 1/1;
+  inline-size: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.content__card-item:nth-child(2) .card-image {
+  filter: grayscale(20%);
+}
+
+.content__card-item:nth-child(3) .card-image {
+  filter: saturate(500%);
+}
+
+.content__card-item:nth-child(4) .card-image {
+  filter: hue-rotate(300deg);
+}
+
+.content__card-item:nth-child(5) .card-image {
+  filter: invert(100%) sepia(60%);
+}
+
+.content__card-item:nth-child(6) .card-image {
+  filter: sepia(100%);
+}
+
+.content__card-item:nth-child(7) .card-image {
+  filter: blur(10px);
+}
+
+.content__card-item:nth-child(8) .card-image {
+  filter: hue-rotate(120deg) blur(2px);
+}
+
+.image-label {
+  position: absolute;
+  top: 25px;
+  right: clamp(0.688rem, 0.379rem + 1.315vw, 1.563rem);
+  color: var(--themes-text-color, #fff);
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.5;
+  text-shadow: -1px 0 var(--text-shadow-color, #fff),
+    0 1px var(--text-shadow-color, #fff), 1px 0 var(--text-shadow-color, #fff),
+    0 -1px var(--text-shadow-color, #fff);
+}
+
+@supports (text-stroke: 1px var(--text-shadow-color, #fff)) or
+  (-webkit-text-stroke: 1px var(--text-shadow-color, #fff)) {
+  .image-label {
+    -webkit-text-stroke: 1px var(--text-shadow-color, #fff);
+    text-stroke: 1px var(--text-shadow-color, #fff);
+    text-shadow: none;
+  }
+}
+
+.card-text {
+  border-block-start: 2px solid var(--themes-main-color, #000);
+  padding: 25px;
+}
+
+.card-paragraph {
+  margin-block-end: 27px;
+  font-size: inherit;
+  line-height: 21px;
+}
+
+.card-paragraph:last-of-type {
+  margin-block-end: 25px;
+}
+
+.card-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  gap: 6px;
+}
+
+.card-button:focus {
+  outline: none;
+}
+
+.card__icon-button {
+  border: 2px solid transparent;
+  display: inline;
+  padding: 0;
+  block-size: 38px;
+  inline-size: 41px;
+  transition: 0.3s ease;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--themes-main-color, #000);
+}
+
+.like-icon {
+  width: 39px;
+  height: 36px;
+}
+
+.contour {
+  fill: var(--heart-counter-color, #000);
+  transition: fill 0.1s linear;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear 0.03s;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-core-hover-color, #000);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--heart-core-active-color, #f00);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-core-hover-color, #000);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-core-active-color, #f00);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-core-liked-color, #f00);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(---heart-main-body-liked-color, #f00);
+  transition: fill 0.3s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(---heart-counter-active-color, #f00);
+  transition: fill 0.3s 0.06s;
+}
+
+.like-icon.is-liked .heart {
+  animation: scale 0.3s 0.1s ease-in;
+}
+
+@keyframes scale {
+  from {
+    transform: scale(1);
+    transform-origin: center;
+  }
+
+  50% {
+    transform: scale(1.5);
+    transform-origin: center;
+  }
+
+  to {
+    transform: scale(1);
+    transform-origin: center;
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s 0.3s ease-in;
+}
+
+@keyframes sparks {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.card__like-button {
+  position: relative;
+  border: 2px solid var(--themes-main-color, #000);
+  inline-size: 130px;
+  block-size: 38px;
+  background-color: var(--themes-background, #fff);
+}
+
+.button-hover::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: var(--themes-main-color, #000);
+  transform: scaleX(0);
+  transform-origin: left center;
+  transition: transform 0.5s ease-in-out;
+}
+
+.button-hover:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+}
+
+.button-focus:focus-visible {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--themes-main-color, #000);
+  transition: box-shadow 0.3s ease;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  font-family: var(--accent-font, sans-serif);
+  color: var(--button-text-color, #fff);
+  font-size: var(--button-font-size, 1 4px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
+  text-wrap: nowrap;
+  mix-blend-mode: difference;
+  animation: opacity 0.4s ease;
+}
+
+.button-hover:hover .button__text,
+.button-hover:hover .floppy {
+  animation: opacity-in 0.4s linear;
+}
+
+@keyframes opacity-in {
+  from {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.button-hover:not(:hover) .button__text,
+.button-hover:not(:hover) .floppy {
+  animation: opacity-out 0.4s linear;
+}
+
+@keyframes opacity-out {
+  from {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.footer {
+  padding: 0 clamp(0rem, -12.727rem + 63.636vw, 2.188rem);
+}
+
+.footer__button {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  white-space: nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border: 2px solid var(--themes-main-color, #000);
+  padding: 15px 20px;
+  margin: 0 auto;
+  background-color: var(--themes-background, #fff);
+}
+
+.floppy {
+  inline-size: 21px;
+  block-size: 21px;
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+.popup__container::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.popup__container {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  transition: opacity 0.3s ease-in-out;
+  background-color: var(--themes-background, #fff);
+  border: 2px solid var(--themes-main-color, #000);
+  inline-size: clamp(22.313rem, 22.313rem + 0vw, 22.313rem);
+  padding: 30px 32px;
+}
+
+.popup__container:not([open]) {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.popup__container .button__text {
+  text-wrap: wrap;
+}
+
+.popup__content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+.popup__floppy {
+  inline-size: 39px;
+  block-size: 39px;
+  mix-blend-mode: difference;
+  flex-shrink: 0;
+}
+
+.close__button {
+  position: relative;
+  padding: 9px 17px;
+  inline-size: 100%;
+  border: 2px solid var(--themes-main-color, #000);
+}
+
+.popup__content .button__text {
+  color: var(--button-text-color, #fff);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+@media (width <= 376px) {
+  .floppy {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+
+  .popup__container {
+    padding-inline: 38px;
+  }
 }
