--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,159 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font-weight: 465;
+    --heading-font-weight: 785;
+
+    --button-text-color: #00cc14;
+    --text-shadow-color: #000;
+    --themes-main-color: #00cc14;
+    --themes-text-color: #00cc14;
+    --themes-background: #000;
+    --themes-background-image: repeating-linear-gradient(
+        90deg,
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(#007f0c 0.01%, #004306 100%);
+    --heart-counter-color: #00cc14;
+    --heart-sparks-color: #f00;
+    --heart-core-active-color: #f00;
+    --heart-main-body-active-color: #f00;
+
+    --floppy-color: #00cc14;
+
+    --heart-counter-color: #00cc14;
+    --heart-sparks-color: #f00;
+
+    --heart-core-hover-color: #00cc14;
+    --heart-main-body-hover-color: #00cc14;
+
+    --animation-element: #00cc14;
+  }
+}
+
+:root.theme-dark {
+  --main-font-weight: 465;
+  --heading-font-weight: 785;
+
+  --button-text-color: #00cc14;
+  --text-shadow-color: #000;
+  --themes-main-color: #00cc14;
+  --themes-text-color: #00cc14;
+  --themes-background: #000;
+  --themes-background-image: repeating-linear-gradient(
+      90deg,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(#000, #000 2px, transparent 2px, transparent 4px),
+    linear-gradient(#007f0c 0.01%, #004306 100%);
+  --heart-counter-color: #00cc14;
+  --heart-sparks-color: #f00;
+  --heart-core-active-color: #f00;
+  --heart-main-body-active-color: #f00;
+
+  --floppy-color: #00cc14;
+
+  --heart-counter-color: #00cc14;
+  --heart-sparks-color: #f00;
+
+  --heart-core-hover-color: #00cc14;
+  --heart-main-body-hover-color: #00cc14;
+
+  --animation-element: #00cc14;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-font: Inter;
+    --accent-font: "Press Start 2P";
+
+    --main-font-weight: 400;
+    --heading-font-weight: 700;
+    --main-font-size: 18px;
+    --button-font-size: 14px;
+
+    --button-text-color: #fff;
+    --text-shadow-color: #fff;
+    --themes-main-color: #000;
+    --themes-text-color: #000;
+    --themes-background: #fff;
+    --themes-background-image: repeating-linear-gradient(
+        to right,
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(#e7e7e7, #e7e7e7 0.01%, #1a1a1a 100%);
+
+    --floppy-color: #fff;
+
+    --heart-counter-color: #000;
+    --heart-sparks-color: #f00;
+
+    --heart-core-hover-color: #000;
+    --heart-main-body-hover-color: #000;
+
+    --animation-element: #000;
+  }
+}
+
+:root.theme-light {
+  --main-font: Inter;
+  --accent-font: "Press Start 2P";
+
+  --main-font-weight: 400;
+  --heading-font-weight: 700;
+  --main-font-size: 18px;
+  --button-font-size: 14px;
+
+  --button-text-color: #fff;
+  --text-shadow-color: #fff;
+  --themes-main-color: #000;
+  --themes-text-color: #000;
+  --themes-background: #fff;
+  --themes-background-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(#e7e7e7, #e7e7e7 0.01%, #1a1a1a 100%);
+
+  --floppy-color: #fff;
+
+  --heart-counter-color: #000;
+  --heart-sparks-color: #f00;
+
+  --heart-core-hover-color: #000;
+  --heart-main-body-hover-color: #000;
+
+  --animation-element: #000;
+}
