--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,13 +4,13 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
 @media (prefers-color-scheme: dark) {
   :root {
     --main-font-weight: 465;
     --heading-font-weight: 785;
 
     --button-text-color: #00cc14;
-    --text-shadow-color: #000;
     --themes-main-color: #00cc14;
     --themes-text-color: #00cc14;
     --themes-background: #000;
@@ -28,20 +28,10 @@
         transparent 4px
       ),
       linear-gradient(#007f0c 0.01%, #004306 100%);
-    --heart-counter-color: #00cc14;
-    --heart-sparks-color: #f00;
-    --heart-core-active-color: #f00;
-    --heart-main-body-active-color: #f00;
 
     --floppy-color: #00cc14;
 
-    --heart-counter-color: #00cc14;
-    --heart-sparks-color: #f00;
-
-    --heart-core-hover-color: #00cc14;
-    --heart-main-body-hover-color: #00cc14;
-
-    --animation-element: #00cc14;
+    --heart-hover-color: #00cc14;
   }
 }
 
@@ -50,7 +40,6 @@
   --heading-font-weight: 785;
 
   --button-text-color: #00cc14;
-  --text-shadow-color: #000;
   --themes-main-color: #00cc14;
   --themes-text-color: #00cc14;
   --themes-background: #000;
@@ -61,36 +50,26 @@
       transparent 2px,
       transparent 4px
     ),
-    repeating-linear-gradient(#000, #000 2px, transparent 2px, transparent 4px),
-    linear-gradient(#007f0c 0.01%, #004306 100%);
-  --heart-counter-color: #00cc14;
-  --heart-sparks-color: #f00;
-  --heart-core-active-color: #f00;
-  --heart-main-body-active-color: #f00;
+    repeating-linear-gradient(
+      #000, 
+      #000 2px, 
+      transparent 2px, 
+      transparent 4px),
+    linear-gradient(
+      #007f0c 0.01%, 
+      #004306 100%);
 
   --floppy-color: #00cc14;
 
-  --heart-counter-color: #00cc14;
-  --heart-sparks-color: #f00;
-
-  --heart-core-hover-color: #00cc14;
-  --heart-main-body-hover-color: #00cc14;
-
-  --animation-element: #00cc14;
+  --heart-hover-color: #00cc14;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --main-font: Inter;
-    --accent-font: "Press Start 2P";
-
     --main-font-weight: 400;
     --heading-font-weight: 700;
-    --main-font-size: 18px;
-    --button-font-size: 14px;
 
     --button-text-color: #fff;
-    --text-shadow-color: #fff;
     --themes-main-color: #000;
     --themes-text-color: #000;
     --themes-background: #fff;
@@ -111,27 +90,15 @@
 
     --floppy-color: #fff;
 
-    --heart-counter-color: #000;
-    --heart-sparks-color: #f00;
-
-    --heart-core-hover-color: #000;
-    --heart-main-body-hover-color: #000;
-
-    --animation-element: #000;
+    --heart-hover-color: #000;
   }
 }
 
 :root.theme-light {
-  --main-font: Inter;
-  --accent-font: "Press Start 2P";
-
   --main-font-weight: 400;
   --heading-font-weight: 700;
-  --main-font-size: 18px;
-  --button-font-size: 14px;
 
   --button-text-color: #fff;
-  --text-shadow-color: #fff;
   --themes-main-color: #000;
   --themes-text-color: #000;
   --themes-background: #fff;
@@ -152,11 +119,5 @@
 
   --floppy-color: #fff;
 
-  --heart-counter-color: #000;
-  --heart-sparks-color: #f00;
-
-  --heart-core-hover-color: #000;
-  --heart-main-body-hover-color: #000;
-
-  --animation-element: #000;
+  --heart-hover-color: #000;
 }
