--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,46 +2,10 @@
 :root {
   --main-font: Inter;
   --accent-font: "Press Start 2P";
-
-  --main-font-weight: 400;
-  --heading-font-weight: 700;
   --main-font-size: 18px;
   --button-font-size: 14px;
 
-  --button-text-color: #fff;
-  --text-shadow-color: #fff;
-  --themes-main-color: #000;
-  --themes-text-color: #000;
-  --themes-background: #fff;
-  --themes-background-image: repeating-linear-gradient(
-      to right,
-      #d3d3d3,
-      #d3d3d3 2px,
-      transparent 2px,
-      transparent 4px
-    ),
-    repeating-linear-gradient(
-      #d3d3d3,
-      #d3d3d3 2px,
-      transparent 2px,
-      transparent 4px
-    ),
-    linear-gradient(#e7e7e7, #e7e7e7 0.01%, #1a1a1a 100%);
-
-  --floppy-color: #fff;
-
-  --heart-counter-color: #000;
+  --heart-active-color: #f00;
+  --heart-liked-color: #f00;
   --heart-sparks-color: #f00;
-
-  --heart-core-hover-color: #000;
-  --heart-main-body-hover-color: #000;
-
-  --heart-core-active-color: #f00;
-  --heart-main-body-active-color: #f00;
-
-  --heart-core-liked-color: #f00;
-  --heart-main-body-liked-color: #f00;
-  --heart-counter-liked-color: #f00;
-
-  --animation-element: #000;
 }
